--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,6 +36,7 @@
             </div>
         </div>
     </body>
+    <script src="../js/dbHelper.js"></script>
     <script src="../js/todo.js"></script>
     <script src="../js/utils.js"></script>
 </html>
