--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,11 +3,15 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+        <META http-equiv="Expires" content="-1">
+        <META http-equiv="Pragma" content="no-cache">
+        <META http-equiv="Cache-Control" content="No-Cache">
+            
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link href="../style/todo.css" rel="stylesheet">
 
+        <link href="../style/fontawesome/css/all.css" rel="stylesheet">
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -36,7 +40,7 @@
             </div>
         </div>
     </body>
-    <script src="../js/dbHelper.js"></script>
-    <script src="../js/todo.js"></script>
+    <script src="../js/mySqlHelper.js"></script>
+    <script src="../js/todo.js?v=1"></script>
     <script src="../js/utils.js"></script>
 </html>
